--- a/MWF/Pages/Donation/DonationList.razor
+++ b/MWF/Pages/Donation/DonationList.razor
@@ -36,7 +36,7 @@
                 @*<td><button @onclick="() => DonationEdit(item.DonorId)">Edit</button></td>*@
                 <td>
                 <a class="btn btn-danger" style="width:20%" href=""><i class="bi bi-pencil-fill me-2"></i></a>
-                    <button type="submit" @onclick="() => DeleteDonation(item.DonationId)" class="btn btn-dangerous"><i class="bi bi-trash3" style=" color: red;margin-right:5px"></i></button>
+                    <button type="submit" @onclick="() => DeleteDonation(item.ID)" class="btn btn-dangerous"><i class="bi bi-trash3" style=" color: red;margin-right:5px"></i></button>
                     <a class="btn btn-secondary" style="width:20%" href=""><i class="bi bi-printer-fill me-2"></i></a>
                 </td>
             </tr>
@@ -49,21 +49,20 @@
     [Inject]
     public DonationService DonationService { get; set; }
 
-    private void DonationEdit(int DonationId)
+    private void DonationEdit(int ID)
     {
         
     }
     private string MyMessage;
 
-    private void DeleteDonation(long DonationId)
+    private void DeleteDonation(long ID)
     {
-        if (DonationId > 0)
+        if (ID > 0)
         {
-            var TextDelete = "DELETE FROM [Donation] WHERE [DonationId] = @DonationId";
+            var TextDelete = "DELETE FROM [Donation] WHERE [ID] = @ID";
             var SQLCommand = new SQLiteCommand(TextDelete, ConnectionClass.GetConnected());
-            SQLCommand.Parameters.AddWithValue("@DonationId", DonationId);
+            SQLCommand.Parameters.AddWithValue("@ID", ID);
 
-            // Execute the deletion command
             var effected = SQLCommand.ExecuteNonQuery();
             if (effected > 0)
             {
