--- a/MWF/Shared/NavMenu.razor
+++ b/MWF/Shared/NavMenu.razor
@@ -114,7 +114,7 @@
             <button type="button" class="btn btn-primary" onclick="window.location.href='https://donate.mumtazwelfare.org/';">
                 Donate Now
             </button>
-            <a class="btn btn-danger" href="/DonationForm" role="button">
+            <a class="btn btn-danger" href="/DonationList" role="button">
                 Reciept
             </a>
         </div>
