--- a/MWF/Pages/_Layout.cshtml
+++ b/MWF/Pages/_Layout.cshtml
@@ -14,24 +14,15 @@
     <link href="css/MyStyle.css" rel="stylesheet" />
     <link href="AppliedBlazor.styles.css" rel="stylesheet" />
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
     @RenderBody()
-
-    @* <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div> *@
-
     <script src="_framework/blazor.server.js"></script>
     
 </body>
@@ -108,7 +99,7 @@
                     </a>
                 </p>
                 <p>
-                    <a href="" class=" text-white" style="font-size: 15px" ;>
+                    <a href="mailto:Info@mumtazwelfare.org" class=" text-white" style="font-size: 15px" ;>
                         <i class="bi bi-envelope"></i>
                         Info@mumtazwelfare.org
                     </a>
