--- a/MWF/Pages/Index.razor
+++ b/MWF/Pages/Index.razor
@@ -20,17 +20,18 @@
         <div class="carousel-item active">
             <img src="/HomePic/pump.jpg" class="d-block w-100" alt="Slider1" >
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
             <img src="/GalaryPic/qm.jpg" class="d-block w-100" alt="Slider1">
         </div>
-        <div class="carousel-item active">
-            <img src="~/GalaryPic/SLideer.jpg" class="d-block w-100" alt="Slider1">
+        <div class="carousel-item">
+            <img src="/GalaryPic/slider rshn.jpg" class="d-block w-100" alt="Slider1">
         </div>
-        <div class="carousel-item active">
-            <img src="/GalaryPic/slider.jpg" class="d-block w-100" alt="Slider1">
+
+        <div class="carousel-item">
+            <img src="/GalaryPic/slider.jpg" class="d-block w-100" alt="Slider4">
         </div>
-        <div class="carousel-item active">
-            <img src="/GalaryPic/Qurbani2024.jpeg" class="d-block w-100" alt="Slider1">
+        <div class="carousel-item">
+            <img src="/GalaryPic/Qurbani2024.jpeg" class="d-block w-100" alt="Slider5">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
